language-bindings/rust/crates/wamr-sys/src/lib.rs

extern "C" {
    #[doc = " Get exception info of the WASM module instance.\n\n @param module_inst the WASM module instance\n\n @return the exception string"]
    pub fn wasm_runtime_get_exception(
        module_inst: wasm_module_inst_t,
    ) -> *const ::core::ffi::c_char;
}
extern "C" {
    #[doc = " Set exception info of the WASM module instance.\n\n @param module_inst the WASM module instance\n\n @param exception the exception string"]
    pub fn wasm_runtime_set_exception(
        module_inst: wasm_module_inst_t,
        exception: *const ::core::ffi::c_char,
    );
}
extern "C" {
    #[doc = " Clear exception info of the WASM module instance.\n\n @param module_inst the WASM module instance"]
    pub fn wasm_runtime_clear_exception(module_inst: wasm_module_inst_t);
}
extern "C" {
    #[doc = " Terminate the WASM module instance.\n\n This function causes the module instance fail as if it raised a trap.\n\n This is intended to be used in situations like:\n\n  - A thread is executing the WASM module instance\n    (eg. it's in the middle of `wasm_application_execute_main`)\n\n  - Another thread has a copy of `wasm_module_inst_t` of\n    the module instance and wants to terminate it asynchronously.\n\n @param module_inst the WASM module instance"]
    pub fn wasm_runtime_terminate(module_inst: wasm_module_inst_t);
}
extern "C" {
    #[doc = " Set custom data to WASM module instance.\n Note:\n  If WAMR_BUILD_LIB_PTHREAD is enabled, this API\n  will spread the custom data to all threads\n\n @param module_inst the WASM module instance\n @param custom_data the custom data to be set"]
    pub fn wasm_runtime_set_custom_data(
        module_inst: wasm_module_inst_t,
        custom_data: *mut ::core::ffi::c_void,
    );
}
extern "C" {
    #[doc = " Get the custom data within a WASM module instance.\n\n @param module_inst the WASM module instance\n\n @return the custom data (NULL if not set yet)"]
    pub fn wasm_runtime_get_custom_data(
        module_inst: wasm_module_inst_t,
    ) -> *mut ::core::ffi::c_void;
}
extern "C" {
    #[doc = " Set the memory bounds checks flag of a WASM module instance.\n\n @param module_inst the WASM module instance\n @param enable the flag to enable/disable the memory bounds checks"]
    pub fn wasm_runtime_set_bounds_checks(module_inst: wasm_module_inst_t, enable: bool);
}
extern "C" {
    #[doc = " Check if the memory bounds checks flag is enabled for a WASM module instance.\n\n @param module_inst the WASM module instance\n @return true if the memory bounds checks flag is enabled, false otherwise"]
    pub fn wasm_runtime_is_bounds_checks_enabled(module_inst: wasm_module_inst_t) -> bool;
}
extern "C" {
    #[doc = " Allocate memory from the heap of WASM module instance\n\n Note: wasm_runtime_module_malloc can call heap functions inside\n the module instance and thus cause a memory growth.\n This API needs to be used very carefully when you have a native\n pointers to the module instance memory obtained with\n wasm_runtime_addr_app_to_native or similar APIs.\n\n @param module_inst the WASM module instance which contains heap\n @param size the size bytes to allocate\n @param p_native_addr return native address of the allocated memory\n        if it is not NULL, and return NULL if memory malloc failed\n\n @return the allocated memory address, which is a relative offset to the\n         base address of the module instance's memory space. Note that\n         it is not an absolute address.\n         Return non-zero if success, zero if failed."]
    pub fn wasm_runtime_module_malloc(
        module_inst: wasm_module_inst_t,
        size: u32,
        p_native_addr: *mut *mut ::core::ffi::c_void,
    ) -> u32;
}
extern "C" {
    #[doc = " Free memory to the heap of WASM module instance\n\n @param module_inst the WASM module instance which contains heap\n @param ptr the pointer to free"]
    pub fn wasm_runtime_module_free(module_inst: wasm_module_inst_t, ptr: u32);
}
extern "C" {
    #[doc = " Allocate memory from the heap of WASM module instance and initialize\n the memory with src\n\n @param module_inst the WASM module instance which contains heap\n @param src the source data to copy\n @param size the size of the source data\n\n @return the allocated memory address, which is a relative offset to the\n         base address of the module instance's memory space. Note that\n         it is not an absolute address.\n         Return non-zero if success, zero if failed."]
    pub fn wasm_runtime_module_dup_data(
        module_inst: wasm_module_inst_t,
        src: *const ::core::ffi::c_char,
        size: u32,
    ) -> u32;
}
extern "C" {
    #[doc = " Validate the app address, check whether it belongs to WASM module\n instance's address space, or in its heap space or memory space.\n\n @param module_inst the WASM module instance\n @param app_offset the app address to validate, which is a relative address\n @param size the size bytes of the app address\n\n @return true if success, false otherwise. If failed, an exception will\n         be thrown."]
    pub fn wasm_runtime_validate_app_addr(
        module_inst: wasm_module_inst_t,
        app_offset: u32,
        size: u32,
    ) -> bool;
}
extern "C" {
    #[doc = " Similar to wasm_runtime_validate_app_addr(), except that the size parameter\n is not provided. This function validates the app string address, check\n whether it belongs to WASM module instance's address space, or in its heap\n space or memory space. Moreover, it checks whether it is the offset of a\n string that is end with '\\0'.\n\n Note: The validation result, especially the NUL termination check,\n is not reliable for a module instance with multiple threads because\n other threads can modify the heap behind us.\n\n @param module_inst the WASM module instance\n @param app_str_offset the app address of the string to validate, which is a\n        relative address\n\n @return true if success, false otherwise. If failed, an exception will\n         be thrown."]
    pub fn wasm_runtime_validate_app_str_addr(
        module_inst: wasm_module_inst_t,
        app_str_offset: u32,
    ) -> bool;
}
extern "C" {
    #[doc = " Validate the native address, check whether it belongs to WASM module\n instance's address space, or in its heap space or memory space.\n\n @param module_inst the WASM module instance\n @param native_ptr the native address to validate, which is an absolute\n        address\n @param size the size bytes of the app address\n\n @return true if success, false otherwise. If failed, an exception will\n         be thrown."]
    pub fn wasm_runtime_validate_native_addr(
        module_inst: wasm_module_inst_t,
        native_ptr: *mut ::core::ffi::c_void,
        size: u32,
    ) -> bool;
}
extern "C" {
    #[doc = " Convert app address(relative address) to native address(absolute address)\n\n Note that native addresses to module instance memory can be invalidated\n on a memory growth. (Except shared memory, whose native addresses are\n stable.)\n\n @param module_inst the WASM module instance\n @param app_offset the app adress\n\n @return the native address converted"]
    pub fn wasm_runtime_addr_app_to_native(
        module_inst: wasm_module_inst_t,
        app_offset: u32,
    ) -> *mut ::core::ffi::c_void;
}
extern "C" {
    #[doc = " Convert native address(absolute address) to app address(relative address)\n\n @param module_inst the WASM module instance\n @param native_ptr the native address\n\n @return the app address converted"]
    pub fn wasm_runtime_addr_native_to_app(
        module_inst: wasm_module_inst_t,
        native_ptr: *mut ::core::ffi::c_void,
    ) -> u32;
}
extern "C" {
    #[doc = " Get the app address range (relative address) that a app address belongs to\n\n @param module_inst the WASM module instance\n @param app_offset the app address to retrieve\n @param p_app_start_offset buffer to output the app start offset if not NULL\n @param p_app_end_offset buffer to output the app end offset if not NULL\n\n @return true if success, false otherwise."]
    pub fn wasm_runtime_get_app_addr_range(
        module_inst: wasm_module_inst_t,
        app_offset: u32,
        p_app_start_offset: *mut u32,
        p_app_end_offset: *mut u32,
    ) -> bool;
}
extern "C" {
    #[doc = " Get the native address range (absolute address) that a native address\n belongs to\n\n @param module_inst the WASM module instance\n @param native_ptr the native address to retrieve\n @param p_native_start_addr buffer to output the native start address\n        if not NULL\n @param p_native_end_addr buffer to output the native end address\n        if not NULL\n\n @return true if success, false otherwise."]
    pub fn wasm_runtime_get_native_addr_range(
        module_inst: wasm_module_inst_t,
        native_ptr: *mut u8,
        p_native_start_addr: *mut *mut u8,
        p_native_end_addr: *mut *mut u8,
    ) -> bool;
}
extern "C" {
    #[doc = " Register native functions with same module name\n\n Note: The array `native_symbols` should not be read-only because the\n library can modify it in-place.\n\n Note: After successful call of this function, the array `native_symbols`\n is owned by the library.\n\n @param module_name the module name of the native functions\n @param native_symbols specifies an array of NativeSymbol structures which\n        contain the names, function pointers and signatures\n        Note: WASM runtime will not allocate memory to clone the data, so\n              user must ensure the array can be used forever\n        Meanings of letters in function signature:\n          'i': the parameter is i32 type\n          'I': the parameter is i64 type\n          'f': the parameter is f32 type\n          'F': the parameter is f64 type\n          'r': the parameter is externref type, it should be a uintptr_t in host\n          '*': the parameter is a pointer (i32 in WASM), and runtime will\n               auto check its boundary before calling the native function.\n               If it is followed by '~', the checked length of the pointer\n               is gotten from the following parameter, if not, the checked\n               length of the pointer is 1.\n          '~': the parameter is the pointer's length with i32 type, and must\n               follow after '*'\n          '$': the parameter is a string (i32 in WASM), and runtime will\n               auto check its boundary before calling the native function\n @param n_native_symbols specifies the number of native symbols in the array\n\n @return true if success, false otherwise"]
    pub fn wasm_runtime_register_natives(
        module_name: *const ::core::ffi::c_char,
        native_symbols: *mut NativeSymbol,
        n_native_symbols: u32,
    ) -> bool;
}
extern "C" {
    #[doc = " Register native functions with same module name, similar to\n   wasm_runtime_register_natives, the difference is that runtime passes raw\n arguments to native API, which means that the native API should be defined as\n   void foo(wasm_exec_env_t exec_env, uint64 *args);\n and native API should extract arguments one by one from args array with macro\n   native_raw_get_arg\n and write the return value back to args[0] with macro\n   native_raw_return_type and native_raw_set_return"]
    pub fn wasm_runtime_register_natives_raw(
        module_name: *const ::core::ffi::c_char,
        native_symbols: *mut NativeSymbol,
        n_native_symbols: u32,
    ) -> bool;
}
